tests/core/snapshots/graphql-dataloader-no-batch-request.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  id: Int
  title: String
  user: User
  userId: Int
}

type Query {
  posts: [Post]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
