tests/core/snapshots/graphql-datasource-errors.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "name": null,
        "id": 2
      }
    },
    "errors": [
      {
        "message": "Failed to resolve name",
        "locations": [
          {
            "line": 1,
            "column": 35
          }
        ]
      }
    ]
  }
}
