tests/core/snapshots/graphql-datasource-errors.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar Int64

scalar Int64Str

scalar JSON

scalar PhoneNumber

type Query {
  user(id: Int): User
}

scalar UInt32

scalar UInt64

scalar UInt64Str

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
