tests/core/snapshots/graphql-datasource-mutation.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "createUser": {
        "name": "Test Name"
      }
    }
  }
}
