tests/core/snapshots/graphql-datasource-mutation.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Mutation {
  createUser(user: UserInput!): User
}

type Query {
  users: [User]
}

type User {
  id: Int
  name: String
}

input UserInput {
  email: String!
  name: String!
  phone: String
}

schema {
  query: Query
  mutation: Mutation
}
