tests/core/snapshots/graphql-datasource-no-args.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "users_list": [
        {
          "name": "Leanne Graham"
        },
        {
          "name": "Ervin Howell"
        }
      ]
    }
  }
}
