tests/core/snapshots/graphql-datasource-no-args.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  users_list: [User]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
