tests/core/snapshots/graphql-datasource-no-args.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query {
  users_list: [User] @graphQL(url: "http://upstream/graphql", name: "users")
}

type User {
  id: Int
  name: String
}
