tests/core/snapshots/graphql-datasource-query-directives.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 123,
        "name": "Leanne Graham"
      }
    }
  }
}
